force-app/main/default/objects/Experience_Bullet__c/Experience_Bullet__c.object-meta.xml
<CustomObject>
    <label>Experience Bullet</label>
    <nameField>
        <label>Experience Bullet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience Bullets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>