force-app/main/default/objects/Experience_Bullet__c/fields/Bullet_Text__c.field-meta.xml
<CustomField>
    <fullName>Bullet_Text__c</fullName>
    <label>Bullet Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>