force-app/main/default/objects/Experience_Bullet__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achievement</fullName>
            </value>
            <value>
                <fullName>Responsibility</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>