force-app/main/default/objects/Experience_Bullet__c/fields/Include_In_CV__c.field-meta.xml
<CustomField>
    <fullName>Include_In_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In CV</label>
    <type>Checkbox</type>
</CustomField>