force-app/main/default/objects/Experience_Bullet__c/fields/Include_In_Resume__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Resume</label>
    <type>Checkbox</type>
</CustomField>