force-app/main/default/objects/Experience_Bullet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Experience Bullets</relationshipLabel>
    <relationshipName>Experience_Bullets</relationshipName>
    <type>Lookup</type>
</CustomField>