force-app/main/default/objects/Experience_Bullet__c/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <externalId>true</externalId>
    <label>Source Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>