force-app/main/default/objects/Experience_Bullet__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Experience</label>
    <referenceTo>WorkExperience__c</referenceTo>
    <relationshipLabel>Experience Bullets</relationshipLabel>
    <relationshipName>Experience_Bullets</relationshipName>
    <type>Lookup</type>
</CustomField>